--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
             </div>
             <div>
               <label>Endpoint path (optional)</label>
-              <input id="apiPath" placeholder="/run" />
+              <input id="apiPath" placeholder="/fire" />
               <div class="small">If blank, app will try common paths automatically.</div>
             </div>
           </div>
